test/MC/SVE/regression-tests/negative_tests/sve-ld3d-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU64E3Load8LSSZ
// Offset register Rm cannot be xzr
ld3d {z24.d, z25.d, z26.d}, p4/z, [x27, xzr, lsl #3]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
